Add template dash

--- a/drivers/templates/drivers/create.html
+++ b/drivers/templates/drivers/create.html
@@ -1,4 +1,4 @@
-{% extends "layouts/pages.html" %} {% block title %}
+{% extends "layouts/admin.html" %} {% block title %}
 <title>Cuy Click Perú - Registrar motorizado</title>
 {% endblock title %} {% block content %}
 <h1>Registrar motorizado</h1>
