--- a/drivers/templates/drivers/detail.html
+++ b/drivers/templates/drivers/detail.html
@@ -1,4 +1,4 @@
-{% extends "layouts/pages.html" %}
+{% extends "layouts/admin.html" %}
 {% block title %}
 <title>Cuy Click Perú - Perfil del motorizado</title>
 {% endblock title %}
