--- a/drivers/templates/drivers/index.html
+++ b/drivers/templates/drivers/index.html
@@ -11,7 +11,7 @@
 
 <div class="card">
      <form method='GET'>
-      <input type='search' name='q' placeholder="¿A quien estás buscando?" value='{{ request.GET.q }}'>
+      <input type='search' style="width: 270px" name='q' placeholder="¿A quien estás buscando?" value='{{ request.GET.q }}'>
       <button type='submit' class="btn btn-primary">Buscar</button>
     </form>
 
