--- a/authentication/templates/auth/login.html
+++ b/authentication/templates/auth/login.html
@@ -2,12 +2,12 @@
 <title>Cuy Click Perú - Iniciar sesión</title>
 {% endblock title %} {% block content %}
 
-<h2>Iniciar Sesión</h2>
+<h3>Iniciar Sesión</h3>
 <form method="post">
   {% csrf_token %}
   <div class="form-group">
     <label for="username">Nombre de usuario</label>
-    <input type="text" name="username" class="input" required/>
+    <input type="text" name="username" class="input" value="{{ request.POST.username }}" required/>
   </div>
   <div class="form-group">
     <label for="password">Contraseña</label>
