--- a/drivers/templates/drivers/delete.html
+++ b/drivers/templates/drivers/delete.html
@@ -1,4 +1,4 @@
-{% extends "layouts/pages.html" %} {% block title %}
+{% extends "layouts/admin.html" %} {% block title %}
 <title>Cuy Click Perú - Eliminar motorizado</title>
 {% endblock title %} {% block content %}
 <h1>Eliminar motorizado</h1>
