--- a/drivers/templates/drivers/edit.html
+++ b/drivers/templates/drivers/edit.html
@@ -1,4 +1,4 @@
-{% extends "layouts/pages.html" %} {% block title %}
+{% extends "layouts/admin.html" %} {% block title %}
 <title>Cuy Click Perú - Editar motorizado</title>
 {% endblock title %} {% block content %}
 <h1>Editar motorizado</h1>
