--- a/templates/partials/message.html
+++ b/templates/partials/message.html
@@ -2,14 +2,14 @@
     {% for message in messages %} 
         <div class="alert alert-{% if message.tags == 'success'%}success{% else %}danger{% endif %}" x-data="{ isOpen: true}" x-show..transition.in.scale.opacity.400ms.out.origin.top.opacity.500ms="isOpen">
             <svg xmlns="http://www.w3.org/2000/svg" width="19.998" height="20"     viewBox="0 0 19.998 20">
-                <path id="Path_512" data-name="Path 512" d="M12,22A10.011,10.011,0,0,1,2,12v-.2A10,10,0,1,1,12,22ZM7.41,11.59,6,13l4,4,8-8L16.59,7.58,10,14.17Z" transform="translate(-2 -2)" fill="#210088"/>
+                <path id="Path_512" data-name="Path 512" d="M12,22A10.011,10.011,0,0,1,2,12v-.2A10,10,0,1,1,12,22ZM7.41,11.59,6,13l4,4,8-8L16.59,7.58,10,14.17Z" transform="translate(-2 -2)" fill="{% if message.tags == 'success' %}#210088{% else %}#e95054{% endif %}"/>
             </svg>
             <div class="message">
                 {{ message }}
             </div>
             <div class="close" @click="isOpen = false">
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14">
-                    <path id="Path_513" data-name="Path 513" d="M17.59,5,12,10.59,6.41,5,5,6.41,10.59,12,5,17.59,6.41,19,12,13.41,17.59,19,19,17.59,13.41,12,19,6.41Z" transform="translate(-5 -5)" fill="#2e3a59"/>
+                    <path id="Path_513" data-name="Path 513" d="M17.59,5,12,10.59,6.41,5,5,6.41,10.59,12,5,17.59,6.41,19,12,13.41,17.59,19,19,17.59,13.41,12,19,6.41Z" transform="translate(-5 -5)" fill="{% if message.tags == 'success' %}#210088{% else %}#e95054{% endif %}"/>
                 </svg>
             </div>
         </div>
