--- a/authentication/templates/auth/login.html
+++ b/authentication/templates/auth/login.html
@@ -1,18 +1,23 @@
-{% extends "layouts/pages.html" %} {% block title %}
+{% extends "layouts/auth.html" %} {% block title %}
 <title>Cuy Click Perú - Iniciar sesión</title>
 {% endblock title %} {% block content %}
 
-<h3>Iniciar Sesión</h3>
-<form method="post">
-  {% csrf_token %}
-  <div class="form-group">
-    <label for="username">Nombre de usuario</label>
-    <input type="text" name="username" class="input" value="{{ request.POST.username }}" required/>
-  </div>
-  <div class="form-group">
-    <label for="password">Contraseña</label>
-    <input type="password" name="password" class="input" required/>
-  </div>
-  <button type="submit" class="btn btn-primary btn-full">Ingresar</button>
-</form>
+<div class="container-auth">
+  {% include "partials/message.html" %}
+  
+  <h4>Iniciar Sesión</h4>
+  <form method="post">
+    {% csrf_token %}
+    <div class="form-group">
+      <label for="username">Nombre de usuario</label>
+      <input type="text" name="username" class="input" value="{{ request.POST.username }}" required/>
+    </div>
+    <div class="form-group">
+      <label for="password">Contraseña</label>
+      <input type="password" name="password" class="input" required/>
+    </div>
+    <button type="submit" class="btn btn-primary btn-full">Ingresar</button>
+  </form>
+  <p>¿No tengo una cuenta? <a href="{% url 'auth:register' %}" class="link">Registrarse</a></p>
+</div>
 {% endblock content %}
