--- a/drivers/templates/drivers/edit.html
+++ b/drivers/templates/drivers/edit.html
@@ -1,13 +1,26 @@
 {% extends "layouts/admin.html" %} {% block title %}
 <title>Cuy Click Perú - Editar motorizado</title>
 {% endblock title %} {% block content %}
-<h1>Editar motorizado</h1>
-<a href="{% url 'auth:create' %}?next={{request.path|urlencode}}"
-  >Nuevo usuario</a
->
-<form method="post" enctype="multipart/form-data">
-  {% csrf_token %} {{ form }}
-  <button type="submit">Editar</button>
-  <a href="{% url 'drivers:index' %}">Cancelar</a>
-</form>
+<div class="content-head">
+  <h4>Editar motorizado</h4>
+  <a href="{% url 'auth:create' %}?next={{request.path|urlencode}}"
+    class="btn btn-outline-primary btn-small">Nuevo usuario</a
+  >
+</div>
+<div class="card">
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %} 
+    {% for field in form %}
+    <div class="form-group">
+      {{ field.label_tag }} {{ field }} {% if field.errors %}
+      <div class="text-invalid">{{ field.errors }}</div>
+      {% endif %}
+    </div>
+    {% endfor %}
+    <div class="actions right">
+      <a href="{% url 'drivers:index' %}" class="btn btn-default">Cancelar</a>
+      <button type="submit" class="btn btn-primary">Editar</button>
+    </div>
+  </form>
+</div>
 {% endblock content %}
