--- a/drivers/templates/drivers/index.html
+++ b/drivers/templates/drivers/index.html
@@ -2,7 +2,7 @@
 <title>Cuy Click Perú - {{ title }}</title>
 {% endblock title %} 
 {% block content %}
-<div class="title-section">
+<div class="content-head">
   <h4>{{ title }}</h4>
   <a href="{% url 'drivers:create' %}" class="btn btn-link">
     <span>Nuevo motorizado</span>
@@ -10,8 +10,8 @@
 </div>
 
 <div class="card">
-     <form method='GET'>
-      <input type='search' style="width: 270px" name='q' placeholder="¿A quien estás buscando?" value='{{ request.GET.q }}'>
+     <form method='GET' class="mb-4">
+      <input type='search' style="width: 270px" name='q' placeholder="¿Que estás buscando?" value='{{ request.GET.q }}'>
       <button type='submit' class="btn btn-primary">Buscar</button>
     </form>
 
