--- a/drivers/templates/drivers/delete.html
+++ b/drivers/templates/drivers/delete.html
@@ -1,12 +1,35 @@
 {% extends "layouts/admin.html" %} {% block title %}
 <title>Cuy Click Perú - Eliminar motorizado</title>
-{% endblock title %} {% block content %}
-<h1>Eliminar motorizado</h1>
-<form method="post">
-  {% csrf_token %}
-  <h4>¿Estás seguro de eliminar el registro?</h4>
-  <p>Está operación no se puede revertir.</p>
-  <button type="submit">Si, eliminar</button>
-  <a href="{% url 'drivers:index' %}">Cancelar</a>
-</form>
+{% endblock title %} 
+
+{% block content_head %}
+<div class="content-head">
+  <div class="left">
+      <a href="{% url 'drivers:index' %}" class="btn btn-link btn-small">
+        <i class='bx bx-left-arrow-alt bx-sm'></i>
+      </a>
+      <h4>Eliminar motorizado</h4>
+  </div>
+</div>
+{% endblock content_head %}
+{% block content %}
+ <div class="card card-form card-delete mb-10">
+    <div class="mb-4 flex justify-start">
+        <div class="icon icon-danger-default icon-cicle icon-xl">
+          <i class='bx bxs-info-circle'></i> 
+        </div>
+    </div>
+    <div>
+        <form method="post">
+          {% csrf_token %}
+          <h5>¿Estás seguro de eliminar el registro?</h5>
+          <p>Los datos no se podrán recuperar, después que realice está operación</p>
+          <div class="actions right mt-6">
+          <button type="submit" class="btn btn-danger">Si, eliminar</button>
+          <a href="{% url 'drivers:index' %}" class="btn btn-default">Cancelar</a>
+          </div>
+        </form>
+    </div>
+</div>
+
 {% endblock content %}
