--- a/drivers/templates/drivers/index.html
+++ b/drivers/templates/drivers/index.html
@@ -1,15 +1,21 @@
 {% extends "layouts/admin.html" %} {% block title %}
 <title>Cuy Click Perú - {{ title }}</title>
 {% endblock title %} 
-{% block content %}
+{% block content_head %}
 <div class="content-head">
-  <h4>{{ title }}</h4>
-  <a href="{% url 'drivers:create' %}" class="btn btn-link">
-    <span>Nuevo motorizado</span>
-  </a>
+  <div class="left">
+    <h4>{{ title }}</h4>
+  </div>
+  <div class="right">
+    <a href="{% url 'drivers:create' %}" class="btn btn-link btn-small text-primary">
+      <span>Nuevo motorizado</span>
+    </a>
+  </div>
 </div>
+{% endblock content_head %}
+{% block content %}
 
-<div class="card">
+<div class="card mb-10">
      <form method='GET' class="mb-4">
       <input type='search' style="width: 270px" name='q' placeholder="¿Que estás buscando?" value='{{ request.GET.q }}'>
       <button type='submit' class="btn btn-primary">Buscar</button>
