--- a/static/css/components/buttons.css
+++ b/static/css/components/buttons.css
@@ -11,6 +11,7 @@
     text-decoration: none;
     font-size: inherit;
     display: inline-block;
+    text-align: center;
 }
 .btn:hover, .btn-circle:hover {
     opacity: .8;
