--- a/static/css/components/card.css
+++ b/static/css/components/card.css
@@ -5,9 +5,18 @@
     background: var(--bg-secondary-color);
 }
 
+.card-delete{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .actions{
     display: flex;
+    flex-direction: column;
     align-items: center;
+    margin-top: 30px;
 }
 .actions > :not(template) ~ :not(template) {
     /* margin-left: -15px; -1rem or 1rem */
@@ -21,9 +30,32 @@
 .actions.right{
     justify-content: flex-end;
 }
+.actions .link, .actions .btn, .actions a{
+    width: 100%;
+    margin-top: 10px;
+}
+.card-form{
+    width: 100%;
+}
 
+@media (min-width: 768px) { 
+    .actions{
+        flex-direction: row;
+    }
+    .actions .link, .actions .btn, .actions a{
+        width: auto;
+    }
+    .card-form{
+        width: 80%;
+        margin: 0 auto;
+    }
+}
 @media (min-width: 1024px){
     .card{
         padding: 32px;
+    }
+    .card-form{
+        width: 60%;
+        margin: 0 auto;
     }
 }
