--- a/static/css/helpers/spacing.css
+++ b/static/css/helpers/spacing.css
@@ -14,3 +14,16 @@
 .mb-4{
     margin-bottom: 1rem;
 }
+.mb-8{
+    margin-bottom: 4rem;
+}
+.mb-10{
+    margin-bottom: 5rem;
+}
+
+.mt-4{
+    margin-top: 1rem;
+}
+.mt-5{
+    margin-top: 2rem;
+}
