--- a/static/css/components/card.css
+++ b/static/css/components/card.css
@@ -1,7 +1,7 @@
 .card{
     border-radius: 16px;
     padding: 20px;
-    box-shadow: 0px 3px 16px rgba(var(--title-color), 0.05);
+    box-shadow: 0px 3px 16px rgba(0, 0, 0, 0.06);
     background: var(--bg-secondary-color);
 }
 
@@ -16,23 +16,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin-top: 30px;
 }
 .actions > :not(template) ~ :not(template) {
     /* margin-left: -15px; -1rem or 1rem */
     --space-x-reverse: 0;
-    margin-right: calc(1rem * var(--space-x-reverse));
-    margin-left: calc(1rem * (1 - var(--space-x-reverse)));
+    margin-bottom: calc(1rem * var(--space-x-reverse));
+    margin-top: calc(1rem * (1 - var(--space-x-reverse)));
+    margin-left: 0;
+    margin-right: 0;
+    flex: content;
 }
 .actions.left{
     justify-content: flex-start;
 }
+.actions.full{
+    flex-direction: column;
+    justify-content: stretch;
+}
 .actions.right{
     justify-content: flex-end;
 }
-.actions .link, .actions .btn, .actions a{
-    width: 100%;
-    margin-top: 10px;
+.actions .link, .actions .btn, .actions a, .actions.full .link, .actions.full .btn, .actions.full a{
+    width: 100%;    
 }
 .card-form{
     width: 100%;
@@ -41,6 +48,23 @@
 @media (min-width: 768px) { 
     .actions{
         flex-direction: row;
+        align-items: center;
+    }
+    .actions.full > :not(template) ~ :not(template) {        
+        --space-x-reverse: 0;
+        margin-bottom: calc(1rem * var(--space-x-reverse));
+        margin-top: calc(1rem * (1 - var(--space-x-reverse)));
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .actions > :not(template) ~ :not(template) {
+        /* margin-left: -15px; -1rem or 1rem */
+        --space-x-reverse: 0;
+        margin-right: calc(1rem * var(--space-x-reverse));
+        margin-left: calc(1rem * (1 - var(--space-x-reverse)));
+        margin-top: 0;
+        margin-bottom: 0;
+        flex: 0;
     }
     .actions .link, .actions .btn, .actions a{
         width: auto;
