--- a/static/css/components/tabbar.css
+++ b/static/css/components/tabbar.css
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     background: var(--bg-secondary-color);
-    box-shadow: 0px 3px 16px rgba(0, 0, 0, 0.02);
+    box-shadow: 0px 3px 30px rgba(0, 0, 0, 0.1);
     padding: 12px 20px;
     margin: 0;
     display: flex;
@@ -29,11 +29,12 @@
 }
 .page-admin .tabbar li.active a,
 .page-admin .tabbar li.active a i{
-    color: rgb(var(--primary-color));
+    color: rgb(var(--title-color));
+    font-weight: 600;
 }
 
 @media (min-width: 1140px) { 
     .page-admin .tabbar{
         display: none;
     }
- }
+}
