--- a/static/css/helpers/flex.css
+++ b/static/css/helpers/flex.css
@@ -10,6 +10,10 @@
 .flex-row {
     flex-direction: row;
 }
+.flex-auto{
+    flex: auto;
+}
+
 .justity-stretch {
     justify-content: stretch;
 }
