--- a/static/css/normalize.css
+++ b/static/css/normalize.css
@@ -8,11 +8,11 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
- /* *{
+ *{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
- }  */
+ } 
 
 html {
   line-height: 1.15; /* 1 */
