--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,7 @@
 
 @import 'base.css';
 
+@import 'helpers/form-grid.css';
 @import 'helpers/flex.css';
 @import 'helpers/spacing.css';
 @import 'helpers/typography.css';
