--- a/templates/layouts/admin.html
+++ b/templates/layouts/admin.html
@@ -11,6 +11,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    {% block styles %} {% endblock styles %}
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
   </head>
   <body>
@@ -29,5 +30,6 @@
             </div>
         </div>
     </div>
+    {% block scripts %} {% endblock scripts %}
   </body>
 </html>
